[package]
name = "pil-stark-prover"
desciption = "Helper library to generate eSTARK proofs using Polygon Hermez command line tools."
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
thiserror = "1.0.43"
itertools = "0.13"
serde_json = "1.0"

[dev-dependencies]
mktemp = "0.5.0"
test-log = "0.2.12"
env_logger = "0.10.0"

[build-dependencies]
num_cpus = "1.16.0"

[profile.pr-tests]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
panic = 'unwind'
codegen-units = 256
